<resources>
    <string name="app_name">Secret</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--Strings in LoginActivity-->
    <string name="login_phone">Phone</string>
    <string name="login_phone_hint">enter your phone</string>
    <string name="login_code">Code</string>
    <string name="login_code_hint">enter code</string>
    <string name="login_getCode">Get Code</string>
    <string name="login_login">Login</string>
    <!--Strings in MessageActivity-->
    <string name="title_activity_message">MessageActivity</string>
    <string name="message_hint">enter your message</string>
    <!--Strings in PubMessageActivity-->
    <string name="title_activity_pub_message">PubMessageActivity</string>
    <string name="pubMessage_summit">Publish Message</string>
</resources>
