<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="20dp"
              android:gravity="center_horizontal">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_phone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/login_phone"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceLarge"/>

        <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:singleLine="true"
                android:hint="@string/login_phone_hint"
                android:textAppearance="?android:textAppearanceLarge"/>

    </LinearLayout>
    <Button
            android:id="@+id/btn_getCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_getCode"
            android:textAppearance="?android:textAppearanceLarge"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/login_code"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceLarge"/>

        <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:hint="@string/login_code_hint"
                android:textAppearance="?android:textAppearanceLarge"/>

    </LinearLayout>
    <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:textAppearance="?android:textAppearanceLarge"/>
</LinearLayout>